platform/kubernetes/wikijs/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wikijs
  labels:
    app.kubernetes.io/name: wikijs
