platform/kubernetes/wikijs/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-js
  namespace: wikijs
  labels:
    app: wiki-js
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wiki-js
  template:
    metadata:
      labels:
        app: wiki-js
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: wiki-js
          image: ghcr.io/requarks/wiki:2.5.314 # {"$imagepolicy": "flux-system:wikijs"}
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /wiki/data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wiki-js-data
