platform/kubernetes/wikijs/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-js
  namespace: wikijs
  labels:
    app: wiki-js
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: wiki-js
